aris/compile_errors_utf8.log
cargo.exe :     Checking stable_deref_trait v1.2.1
At line:1 char:1
+ & "$env:USERPROFILE\.cargo\bin\cargo" check > compile_errors.log 
2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~
    + CategoryInfo          : NotSpecified: (    Checking stable_d 
   eref_trait v1.2.1:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    Checking cfg-if v1.0.4
    Checking smallvec v1.15.1
    Checking writeable v0.6.2
    Checking litemap v0.8.1
    Checking windows-link v0.2.1
    Checking typenum v1.19.0
    Checking icu_properties_data v2.1.2
    Checking icu_normalizer_data v2.1.1
    Checking zerocopy v0.8.47
    Checking zerofrom v0.1.6
    Checking futures-core v0.3.32
    Checking getrandom v0.2.17
    Checking memchr v2.8.0
    Checking futures-sink v0.3.32
    Checking pin-project-lite v0.2.17
    Checking windows-sys v0.61.2
    Checking utf8_iter v1.0.4
    Checking yoke v0.8.1
    Checking futures-io v0.3.32
    Checking rand_core v0.6.4
    Checking futures-channel v0.3.32
    Checking percent-encoding v2.3.2
    Checking bytes v1.11.1
    Checking slab v0.4.12
    Checking futures-task v0.3.32
    Checking scopeguard v1.2.0
    Checking itoa v1.0.18
    Checking form_urlencoded v1.2.2
    Checking parking_lot_core v0.9.12
    Checking serde_core v1.0.228
    Checking lock_api v0.4.14
    Checking zerovec v0.11.5
    Checking zerotrie v0.2.3
    Checking cpufeatures v0.2.17
    Checking thiserror v1.0.69
    Checking futures-util v0.3.32
    Checking generic-array v0.14.7
    Checking httparse v1.10.1
    Checking byteorder v1.5.0
    Checking utf-8 v0.7.6
    Checking parking_lot v0.12.5
    Checking log v0.4.29
    Checking http v1.4.0
    Checking data-encoding v2.10.0
    Checking zmij v1.0.21
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
    Checking icu_collections v2.1.1
    Checking icu_locale_core v2.1.1
    Checking crypto-common v0.1.7
    Checking block-buffer v0.10.4
    Checking digest v0.10.7
    Checking sha1 v0.10.6
    Checking icu_provider v2.1.1
    Checking icu_properties v2.1.2
    Checking icu_normalizer v2.1.1
    Checking mio v1.1.1
    Checking socket2 v0.6.3
    Checking serde v1.0.228
    Checking serde_json v1.0.149
    Checking tokio v1.50.0
    Checking bincode v1.3.3
    Checking futures-executor v0.3.32
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking futures v0.3.32
    Checking url v2.5.8
    Checking ppv-lite86 v0.2.21
    Checking rand_chacha v0.3.1
    Checking rand v0.8.5
    Checking tungstenite v0.21.0
    Checking tokio-tungstenite v0.21.0
    Checking aris v0.1.0 (C:\Users\Sandeep 
Kumar\OneDrive\Desktop\code\ARIS\aris)
error[E0603]: enum import `EdgeType` is private
  --> src\traversal.rs:4:27
   |
 4 | use crate::graph::{Graph, EdgeType};
   |                           ^^^^^^^^ private enum import
   |
note: the enum import `EdgeType` is defined here...
  --> src\graph.rs:2:5
   |
 2 | use crate::types::*;
   |     ^^^^^^^^^^^^^^^
note: ...and refers to the enum `EdgeType` which is defined here
  --> src\types.rs:12:1
   |
12 | pub enum EdgeType {
   | ^^^^^^^^^^^^^^^^^ you could import this directly
help: import `EdgeType` through the re-export
   |
 4 | use crate::graph::{Graph, types::EdgeType};
   |                           +++++++

error[E0603]: enum import `EdgeType` is private
  --> src\context.rs:3:27
   |
 3 | use crate::graph::{Graph, EdgeType};
   |                           ^^^^^^^^ private enum import
   |
note: the enum import `EdgeType` is defined here...
  --> src\graph.rs:2:5
   |
 2 | use crate::types::*;
   |     ^^^^^^^^^^^^^^^
note: ...and refers to the enum `EdgeType` which is defined here
  --> src\types.rs:12:1
   |
12 | pub enum EdgeType {
   | ^^^^^^^^^^^^^^^^^ you could import this directly
help: import `EdgeType` through the re-export
   |
 3 | use crate::graph::{Graph, types::EdgeType};
   |                           +++++++

warning: unused variable: `worker_count`
  --> src\orchestrator.rs:44:16
   |
44 |     pub fn new(worker_count: usize) -> (Self, 
mpsc::Receiver<Task>) {
   |                ^^^^^^^^^^^^ help: if this is intentional, 
prefix it with an underscore: `_worker_count`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) 
on by default

For more information about this error, try `rustc --explain E0603`.
warning: `aris` (bin "aris") generated 1 warning
error: could not compile `aris` (bin "aris") due to 2 previous 
errors; 1 warning emitted
